--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,5 +7,7 @@ services:
       POSTGRES_PASSWORD: "culaso"
       POSTGRES_USER: "test"
       POSTGRES_DB: "clothes-shopping"
+    volumes:
+      - ./etc/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
