fix: change gradlew file permission

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,5 +28,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'corretto'
+      - name: Fix gradlew file permission
+        run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
